--- a/src/Components/css/manager.css
+++ b/src/Components/css/manager.css
@@ -1,6 +1,6 @@
 .app {
   position: relative;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .add-button {
@@ -11,7 +11,7 @@
   height: 50px;
   border-radius: 50%;
   font-size: 24px;
-  background-color: #2ecc71;
+  background-color: #00ff6a;
   color: white;
   border: none;
   outline: none;
