--- a/src/Components/AdminComponents/css/product.css
+++ b/src/Components/AdminComponents/css/product.css
@@ -129,7 +129,9 @@ max-width: 150px;
     display: block;
   }
   .table-container {
-    max-height: 500px; /* Chiều cao tối đa của khung */
+    max-height:500px; 
+    min-height:500px; 
+
     overflow-y: auto; /* Cho phép cuộn dọc khi nội dung vượt quá chiều cao */
   }
   
@@ -140,4 +142,6 @@ max-width: 150px;
     background-color: white; /* Màu nền của phần tử */
     padding: 10px; /* Khoảng cách padding để phân tách với nội dung khác */
   }
+  
+
   
